--- a/public/miniapp.html
+++ b/public/miniapp.html
@@ -40,31 +40,24 @@
                 const response = await fetch(`${API_URL}/auth/telegram`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ initData })
+                    body: JSON.stringify({ initData }),
+                    credentials: 'include',
                 });
 
                 console.log('Auth response status:', response.status);
                 const data = await response.json();
                 console.log('Auth response:', data);
 
-                if (response.ok && data.token) {
-                    localStorage.setItem('jwt_token', data.token);
-                    console.log('Authentication successful, token saved:', data.token);
+                if (response.ok && data.access_token && data.refresh_token) {
+                    console.log('Authentication successful', );
                     return true;
                 } else {
-                    console.error('Authentication failed:', data.error || 'No token received', 'Code:', data.code);
-                    if (data.code === 'missing_init_data') {
-                        console.error('Missing initData, aborting retries.');
-                        showError('Ошибка: initData недоступно. Открой через бота.');
-                        Telegram.WebApp.openTelegramLink(BOT_URL);
-                        return false;
-                    }
-                    throw new Error(data.error || 'No token received');
+                    console.error('Authentication failed:', data.error || 'No tokens received', 'Code:', data.code);
+                    throw new Error(data.error || 'No tokens received');
                 }
             } catch (error) {
                 console.error('Auth error:', error.message);
                 retries++;
-
                 if (retries <= maxRetries) {
                     console.log(`Retrying authentication in ${delay}ms...`);
                     await new Promise(resolve => setTimeout(resolve, delay));
@@ -76,31 +69,49 @@
                 }
             }
         }
-
         return false;
     }
 
-    async function fetchUserWithRetry(maxRetries = 1, delay = 1000) {
-        const token = localStorage.getItem('jwt_token');
-        if (!token) {
-            console.error('No token found');
-            showError('Требуется авторизация.');
-            await authenticateWithRetry();
-            return;
-        }
+    async function refreshToken() {
+        try {
+            console.log('Refreshing token...');
+            const response = await fetch(`${API_URL}/auth/refresh`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                credentials: 'include', // Включаем куки в запрос
+            });
 
+            console.log('Refresh response status:', response.status);
+            const data = await response.json();
+            console.log('Refresh response:', data);
+
+            if (response.ok) {
+                console.log('Token refreshed successfully');
+                return true;
+            } else {
+                console.error('Refresh failed:', data.error || 'Unknown error', 'Code:', data.code);
+                showError('Сессия истекла. Повтори авторизацию.');
+                return false;
+            }
+        } catch (error) {
+            console.error('Refresh token error:', error.message);
+            showError('Ошибка обновления сессии. Повтори авторизацию.');
+            return false;
+        }
+    }
+
+    async function fetchUserWithRetry(maxRetries = 1, delay = 1000) {
         let retries = 0;
 
         while (retries <= maxRetries) {
             try {
-                console.log('Fetching user with token:', token);
-                await new Promise(resolve => setTimeout(resolve, 1000));
+                console.log('Fetching user...');
                 const response = await fetch(`${API_URL}/user`, {
                     method: 'GET',
                     headers: {
-                        'Authorization': `Bearer ${token}`,
                         'Content-Type': 'application/json',
-                    }
+                    },
+                    credentials: 'include',
                 });
 
                 console.log('GET /api/user status:', response.status);
@@ -111,20 +122,19 @@
                     console.log('User data:', data);
                     displayUser(data);
                     return;
-                } else {
-                    console.error('Fetch user failed:', data.error || 'Unknown error', 'Code:', data.code, 'Details:', data.details);
-                    if (response.status === 401 || data.code === 'invalid_token' || data.code === 'no_user') {
-                        localStorage.removeItem('jwt_token');
-                        showError('Сессия истекла. Повтори авторизацию.');
-                        await authenticateWithRetry();
+                } else if (response.status === 401) {
+                    // Access token истёк, пробуем обновить
+                    const refreshed = await refreshToken();
+                    if (!refreshed) {
                         return;
                     }
+                } else {
+                    console.error('Fetch user failed:', data.error || 'Unknown error', 'Code:', data.code);
                     throw new Error(data.error || `HTTP error: ${response.status}`);
                 }
             } catch (error) {
                 console.error('Fetch user error:', error.message);
                 retries++;
-
                 if (retries <= maxRetries) {
                     console.log(`Retrying fetch user in ${delay}ms...`);
                     await new Promise(resolve => setTimeout(resolve, delay));
@@ -148,15 +158,10 @@
             return;
         }
 
-        if (localStorage.getItem('jwt_token')) {
-            console.log('Token found in localStorage, fetching user');
+        console.log('Authenticating');
+        const success = await authenticateWithRetry();
+        if (success) {
             await fetchUserWithRetry();
-        } else {
-            console.log('No token found, authenticating');
-            const success = await authenticateWithRetry();
-            if (success) {
-                await fetchUserWithRetry();
-            }
         }
     }
 
